<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title_tournament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/title_choose_tournament"
        android:textAppearance="@style/TextView.ToolbarTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_champions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:contentDescription="@string/content_description_champions"
        app:layout_constraintBottom_toTopOf="@+id/iv_libertadores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_tournament"
        app:srcCompat="@drawable/ic_champions" />

    <ImageView
        android:id="@+id/iv_libertadores"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:contentDescription="@string/content_description_libertadores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_champions"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_libertadores" />

</androidx.constraintlayout.widget.ConstraintLayout>